[package]
name = "awesome-oidc-service"
version = "0.1.0"
authors = ["Abdelrahman Hussein <ahus@hellofresh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.40"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
